--- a/DynamicForm/Views/Fields/Index.cshtml
+++ b/DynamicForm/Views/Fields/Index.cshtml
@@ -181,11 +181,48 @@
                     {
                         'bSortable': false, "autoWidth": true,
                         "render": function (data, type, row) {
-                            return '<a>Properties </>'
+                         return '<a>Properties </>  <a href="@Url.Action("Index", "Fields")?id=' + row.id + '">Controls<a/><a  type="button"  data-tw-toggle="modal" class="btn btn-success" title="Edit Field" data-tw-target="#update-region-modal-preview" onclick="editRegion(\'' + row.id + '\')">Edit</a>  <a  type="button"  class="btn btn-danger" title="Delete Field" onclick="deleteField(\'' + row.id + '\')">Delete</a>  ';
                         }
                     }
                 ] 
             }); 
         } 
+
+          function deleteField(id) {
+         Swal.fire({
+            title: "Confirmation",
+            text: "Are you sure you want to delete?",
+            type: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Yes, delete it!',
+            showLoaderOnConfirm: true,
+            animation: !1,
+            preConfirm: function () {
+                return new Promise(function (resolve) {
+                    $.ajax({
+                        url: '@Url.Action("DeleteForm", "Fields")?id=' + id,
+                        type: 'POST',
+                        headers: { "RequestVerificationToken": $('input[name="__RequestVerificationToken"]').val() },
+                        dataType: 'json'
+                    })
+                        .done(function (response) {
+                            oTable = $('#tbField').DataTable();
+                            oTable.draw();
+                             if (response.error == false) {
+                                Swal.fire('Deleted!', response.message, 'success')
+                            }
+                            else {
+                                Swal.fire('Oops...', response.message, 'error')
+                            }
+                        })
+                        .fail(function () {
+                            Swal.fire('Oops...', response.message, 'error')
+                        });
+                });
+            },
+        });
+    }
     </script>
 }
