--- a/DynamicForm/Views/Forms/Index.cshtml
+++ b/DynamicForm/Views/Forms/Index.cshtml
@@ -156,7 +156,7 @@
                     {
                         'bSortable': false, "autoWidth": true,
                         "render": function (data, type, row) {
-                             return '<a href="@Url.Action("Index", "Fields")?id=' + row.id + '">Controls<a/><a  type="button"  data-tw-toggle="modal" class="btn btn-success" title="Edit Region" data-tw-target="#update-region-modal-preview" onclick="editRegion(\'' + row.id + '\')">Edit</a>  <a  type="button"  class="btn btn-danger" title="Delete Region" onclick="deleteForm(\'' + row.id + '\')">Delete</a>  ';
+                             return '<a href="@Url.Action("Index", "Fields")?id=' + row.id + '">Controls<a/><a  type="button"  data-tw-toggle="modal" class="btn btn-success" title="Edit Form" data-tw-target="#update-region-modal-preview" onclick="editRegion(\'' + row.id + '\')">Edit</a>  <a  type="button"  class="btn btn-danger" title="Delete Form" onclick="deleteForm(\'' + row.id + '\')">Delete</a>  ';
                         }
                     }
                 ] 
@@ -185,11 +185,7 @@
                         .done(function (response) {
                             oTable = $('#tbForm').DataTable();
                             oTable.draw();
-                            if (response.error == true && response.message == "session expired") {
-                                alert('session expired!! Login Again!');
-                                location.href = "/Login/Index";
-                            }
-                            else if (response.error == false) {
+                            if (response.error == false) {
                                 Swal.fire('Deleted!', response.message, 'success')
                             }
                             else {
