Display control name changes

--- a/DynamicForm/Views/Fields/Index.cshtml
+++ b/DynamicForm/Views/Fields/Index.cshtml
@@ -174,14 +174,14 @@
                 }],
                 "columns": [
                     { "data": "name", "name": "Name", "autoWidth": true },
-                    { "data": "controlId", "name": "ControlId", "autoWidth": true },
+                    { "data": "controlName", "name": "ControlName", "autoWidth": true },
                     { "data": "defaultValue", "name": "DefaultValue", "autoWidth": true },
                     { "data": "isRequired", "name": "IsRequired", "autoWidth": true },
                     { "data": "status", "name": "Status", "autoWidth": true },
                     {
                         'bSortable': false, "autoWidth": true,
                         "render": function (data, type, row) {
-                         return '<a>Properties </> <a  type="button"  data-tw-toggle="modal" class="btn btn-xs btn-success" title="Edit Field" data-tw-target="#update-region-modal-preview" onclick="editRegion(\'' + row.id + '\')">Edit</a>  <a  type="button"  class="btn btn-xs btn-danger" title="Delete Field" onclick="deleteField(\'' + row.id + '\')">Delete</a>  ';
+                            return '<a type="button"  data-tw-toggle="modal" class="btn btn-xs btn-info">Properties <a/> <a  type="button"  data-tw-toggle="modal" class="btn btn-xs btn-success" title="Edit Field" data-tw-target="#update-region-modal-preview" onclick="editRegion(\'' + row.id + '\')">Edit</a>  <a  type="button"  class="btn btn-xs btn-danger" title="Delete Field" onclick="deleteField(\'' + row.id + '\')">Delete</a>  ';
                         }
                     }
                 ] 
