--- a/DynamicForm/Views/Fields/Index.cshtml
+++ b/DynamicForm/Views/Fields/Index.cshtml
@@ -5,6 +5,7 @@
 }
 <link href="~/lib/datatables/css/jquery.datatables.min.css" rel="stylesheet" />
 <link href="~/lib/sweetalert/css/sweetalert2.min.css" rel="stylesheet" />
+<script src="~/lib/datatables/js/responsive.bootstrap.min.js"></script>
 
 <style>
     .modal {
@@ -29,7 +30,7 @@
                 <table class="table table-striped table-bordered table-responsive" id="tbField" style="width:100%">
                     <thead>
                         <tr class="bg-secondary">
-                             <th style="min-width:30px">Name</th>
+                            <th style="min-width:30px">Name</th>
                             <th style="min-width:30px">Control Type</th>
                             <th style="min-width:30px">Default Value</th>
                             <th style="min-width:30px">Required?</th>
@@ -49,7 +50,7 @@
                     <!-- Modal content-->
                     <div class="modal-content">
                         <div class="modal-header bg-warning">
-                            <h4 class="modal-title">Add/Edit Form Control</h4>
+                            <h4 class="modal-title">Add Form Control</h4>
                             <button type="button" class="close" data-dismiss="modal" id="modelclose">&times;</button>
                         </div>
                         <div class="modal-body">
@@ -99,6 +100,10 @@
                 </div>
             </div>
         </form>
+
+        <div class="modal" id="myModal" role="dialog" aria-hidden="true" data-backdrop="static" data-keyboard="false" tabindex="-1">
+        </div>
+
     </div>
 </div>
 
@@ -124,7 +129,7 @@
         });
 
         completedField = function (xhr) {
-             var rtn = JSON.parse(xhr.responseText);
+            var rtn = JSON.parse(xhr.responseText);
             if (rtn.error == false) {
                 Swal.fire({
                     title: 'Template Field',
@@ -133,7 +138,8 @@
                     allowOutsideClick: false
                 }).then(function () {
                     $('#add-field-model').hide();
-                    oTable = $('#tbField').DataTable();
+                    $('#myModal').hide();                    
+                    oTable = $('#tbField').DataTable();                   
                     oTable.draw();
                 });
                 $('#btnFieldClose').click();
@@ -156,7 +162,7 @@
             frm.reset();
         }
 
-           function bind() {
+        function bind() {
             $("#tbField").DataTable({
                 "processing": true, // for show progress bar
                 "serverSide": true,
@@ -181,48 +187,60 @@
                     {
                         'bSortable': false, "autoWidth": true,
                         "render": function (data, type, row) {
-                         return '<a>Properties </> <a  type="button"  data-tw-toggle="modal" class="btn btn-xs btn-success" title="Edit Field" data-tw-target="#update-region-modal-preview" onclick="editRegion(\'' + row.id + '\')">Edit</a>  <a  type="button"  class="btn btn-xs btn-danger" title="Delete Field" onclick="deleteField(\'' + row.id + '\')">Delete</a>  ';
+                            return '<a type="button" data-toggle="modal" data-target="#myModal" class="btn btn-xs btn-success" onclick="editFieldProperty(\'' + row.id + '\')">Edit<a/> <a  type="button"  class="btn btn-xs btn-danger" title="Delete Form" onclick="deleteForm(\'' + row.id + '\')">Delete</a>  ';
+
                         }
                     }
-                ] 
-            }); 
-        } 
+                ]
+            });
+        }
 
-          function deleteField(id) {
-         Swal.fire({
-            title: "Confirmation",
-            text: "Are you sure you want to delete?",
-            type: 'warning',
-            showCancelButton: true,
-            confirmButtonColor: '#3085d6',
-            cancelButtonColor: '#d33',
-            confirmButtonText: 'Yes, delete it!',
-            showLoaderOnConfirm: true,
-            animation: !1,
-            preConfirm: function () {
-                return new Promise(function (resolve) {
-                    $.ajax({
-                        url: '@Url.Action("DeleteForm", "Fields")?id=' + id,
-                        type: 'POST',
-                        headers: { "RequestVerificationToken": $('input[name="__RequestVerificationToken"]').val() },
-                        dataType: 'json'
-                    })
-                        .done(function (response) {
-                            oTable = $('#tbField').DataTable();
-                            oTable.draw();
-                             if (response.error == false) {
-                                Swal.fire('Deleted!', response.message, 'success')
-                            }
-                            else {
-                                Swal.fire('Oops...', response.message, 'error')
-                            }
+        function editFieldProperty(id) {
+            $.ajax({
+                url: '@Url.Action("GetFieldPropertiesById", "Fields")?id=' + id,
+                type: 'get',
+                headers: { "RequestVerificationToken": $('input[name="__RequestVerificationToken"]').val() },
+                success: (result) => {
+                    $('#myModal').html(result);
+                }
+            });
+        }
+
+        function deleteField(id) {
+            Swal.fire({
+                title: "Confirmation",
+                text: "Are you sure you want to delete?",
+                type: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes, delete it!',
+                showLoaderOnConfirm: true,
+                animation: !1,
+                preConfirm: function () {
+                    return new Promise(function (resolve) {
+                        $.ajax({
+                            url: '@Url.Action("DeleteForm", "Fields")?id=' + id,
+                            type: 'POST',
+                            headers: { "RequestVerificationToken": $('input[name="__RequestVerificationToken"]').val() },
+                            dataType: 'json'
                         })
-                        .fail(function () {
-                            Swal.fire('Oops...', response.message, 'error')
-                        });
-                });
-            },
-        });
-    }
+                            .done(function (response) {
+                                oTable = $('#tbField').DataTable();
+                                oTable.draw();
+                                if (response.error == false) {
+                                    Swal.fire('Deleted!', response.message, 'success')
+                                }
+                                else {
+                                    Swal.fire('Oops...', response.message, 'error')
+                                }
+                            })
+                            .fail(function () {
+                                Swal.fire('Oops...', response.message, 'error')
+                            });
+                    });
+                },
+            });
+        }
     </script>
 }
