--- a/DynamicForm/Views/Forms/Index.cshtml
+++ b/DynamicForm/Views/Forms/Index.cshtml
@@ -156,26 +156,25 @@
                     {
                         'bSortable': false, "autoWidth": true,
                         "render": function (data, type, row) {
-                             return '<a href="@Url.Action("Index", "Fields")?id=' + row.id + '">Controls<a/> <a  type="button"  data-tw-toggle="modal" class="btn btn-xs btn-success" title="Edit Form" data-tw-target="#update-region-modal-preview" onclick="editRegion(\'' + row.id + '\')">Edit</a>  <a  type="button"  class="btn btn-xs btn-danger" title="Delete Form" onclick="deleteForm(\'' + row.id + '\')">Delete</a>  ';
+                            return '<a type="button"  data-tw-toggle="modal" class="btn btn-xs btn-info" href="@Url.Action("Index", "Fields")?id=' + row.id + '">Controls<a/> <a  type="button"  data-tw-toggle="modal" class="btn btn-xs btn-success" title="Edit Form" data-tw-target="#update-region-modal-preview" onclick="editRegion(\'' + row.id + '\')">Edit</a>  <a  type="button"  class="btn btn-xs btn-danger" title="Delete Form" onclick="deleteForm(\'' + row.id + '\')">Delete</a>  ';
                         }
                     }
-                ] 
-            }); 
+                ]
+            });
         }
 
-         function deleteForm(id) {
-         Swal.fire({
-            title: "Confirmation",
-            text: "Are you sure you want to delete?",
-            type: 'warning',
-            showCancelButton: true,
-            confirmButtonColor: '#3085d6',
-            cancelButtonColor: '#d33',
-            confirmButtonText: 'Yes, delete it!',
-            showLoaderOnConfirm: true,
-            animation: !1,
-            preConfirm: function () {
-                return new Promise(function (resolve) {
+        function deleteForm(id) {
+            Swal.fire({
+                title: "Confirmation",
+                text: "Are you sure you want to delete?",
+                type: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes, delete it!',
+                showLoaderOnConfirm: true,
+                animation: !1,
+                preConfirm: function () {
                     $.ajax({
                         url: '@Url.Action("DeleteForm", "Forms")?id=' + id,
                         type: 'POST',
@@ -185,21 +184,20 @@
                         .done(function (response) {
                             oTable = $('#tbForm').DataTable();
                             oTable.draw();
+
                             if (response.error == false) {
                                 Swal.fire('Deleted!', response.message, 'success')
-                            }
-                            else {
+                            } else {
                                 Swal.fire('Oops...', response.message, 'error')
                             }
                         })
                         .fail(function () {
                             Swal.fire('Oops...', response.message, 'error')
                         });
-                });
-            },
-        });
-    }
-         
+                },
+            });
+        }
+
     </script>
 
 }
