--- a/DynamicForm/Views/Fields/Index.cshtml
+++ b/DynamicForm/Views/Fields/Index.cshtml
@@ -100,7 +100,7 @@
             </div>
         </form>
 
-        <div class="modal" id="myModal" role="dialog" aria-hidden="true" data-backdrop="static" data-keyboard="false" tabindex="-1">
+        <div class="modal" id="update-field-model" role="dialog" aria-hidden="true" data-backdrop="static" data-keyboard="false" tabindex="-1">
         </div>
 
     </div>
@@ -137,9 +137,7 @@
                     allowOutsideClick: false
                 }).then(function () {
                     $('#add-field-model').hide();
-                    $('#myModal').hide();
-                    
-                    oTable = $('#tbField').DataTable();                   
+                    oTable = $('#tbField').DataTable();
                     oTable.draw();
                 });
                 $('#btnFieldClose').click();
@@ -156,13 +154,43 @@
             }
         };
 
+        updatedField = function (xhr) {
+            var rtn = JSON.parse(xhr.responseText);
+            if (rtn.error == false) {
+                Swal.fire({
+                    title: 'Template Field',
+                    text: rtn.message,
+                    type: 'success',
+                    allowOutsideClick: false
+                }).then(function () {
+                    $('#update-field-model').hide();
+                    oTable = $('#tbField').DataTable();
+                    oTable.draw();
+                });
+                $('#btnUpdateFieldClose').click();
+                clearFieldUpdate();
+            }
+            else {
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Template Field',
+                    text: 'Oops!! Something Went Wrong!',
+                    type: 'error',
+                    allowOutsideClick: false
+                });
+            }
+        };
+
         function clearFieldCreate() {
             $('.field-validation-error').empty();
             var frm = document.getElementsByName('createfield')[0];
+            frm.reset();
+        }
+        function clearFieldUpdate() {
+            $('.field-validation-error').empty();
             var frm = document.getElementsByName('editfield')[0];
             frm.reset();
         }
-
         function bind() {
             $("#tbField").DataTable({
                 "processing": true, // for show progress bar
@@ -188,9 +216,7 @@
                     {
                         'bSortable': false, "autoWidth": true,
                         "render": function (data, type, row) {
-                            
-                            return '<a type="button" data-toggle="modal" data-target="#myModal" class="btn btn-xs btn-success" onclick="editFieldProperty(\'' + row.id + '\')">Edit<a/> <a  type="button"  class="btn btn-xs btn-danger" title="Delete Field" onclick="deleteField(\'' + row.id + '\')">Delete</a> ';
-
+                            return '<a type="button" data-toggle="modal" data-target="#update-field-model" class="btn btn-xs btn-success" onclick="editFieldProperty(\'' + row.id + '\')">Edit<a/> <a  type="button"  class="btn btn-xs btn-danger" title="Delete Field" onclick="deleteField(\'' + row.id + '\')">Delete</a> ';
                         }
                     }
                 ]
@@ -203,7 +229,7 @@
                 type: 'get',
                 headers: { "RequestVerificationToken": $('input[name="__RequestVerificationToken"]').val() },
                 success: (result) => {
-                    $('#myModal').html(result);
+                    $('#update-field-model').html(result);
                 }
             });
         }
