Update form issues fixed

--- a/DynamicForm/Views/Fields/_EditFields.cshtml
+++ b/DynamicForm/Views/Fields/_EditFields.cshtml
@@ -52,8 +52,8 @@
                 <input type="hidden" asp-for="TemplateFormId" name="TemplateFormId" />
             </div>
             <div class="modal-footer">
-                <button class="btn btn-danger" id="btnUpdateFieldClose" data-dismiss="modal" aria-hidden="true">Close</button>
-                <button class="btn btn-success ">Save changes</button>
+                <button class="btn btn-danger" id="btnUpdateFieldClose" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove"></span>Close</button>
+                <button class="btn btn-success"><span class="glyphicon glyphicon-floppy-saved"></span> Save changes</button>
             </div>          
         </div>
     </div>
