--- a/DynamicForm/Views/Fields/_EditFields.cshtml
+++ b/DynamicForm/Views/Fields/_EditFields.cshtml
@@ -4,6 +4,10 @@
     ViewBag.Title = "Edit Form Controls";
 }
 
+<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+
+
 <form name="editfield" asp-controller="Fields" asp-action="SaveField" method="post"
       data-ajax="true" data-ajax-method="post" data-ajax-complete="updatedField" enctype="multipart/form-data" autocomplete="off">
     <div class="modal-dialog" id="add-field-model">
@@ -16,37 +20,58 @@
                 <div class="form-group">
                     <label class="required" for="FieldName">Name</label>
                     <input type="text" id="FieldName" class="form-control" asp-for="Name" />
-                    <span asp-validation-for="Name" class="text-danger"></span>
+                    <span class="text-danger">
+                        @Html.ValidationMessageFor(model => model.Name)
+                    </span>
+                    @*<span asp-validation-for="Name" class="text-danger"></span>*@
                 </div>
                 <div class="form-group">
                     <label class="required" for="FieldDataType">Control Type</label>
                     <select name="ControlId" class="form-control" asp-for="ControlId" asp-items="@ViewBag.ControlTypes"></select>
-                    <span asp-validation-for="ControlId" class="text-danger"></span>
+                    <span class="text-danger">
+                        @Html.ValidationMessageFor(model => model.ControlId,Model.ControlName)
+                    </span>
+                    @*<span asp-validation-for="ControlId" class="text-danger"></span>*@
                 </div>
                 <div class="form-group">
                     <label class="required" for="DefaultValue">Default Value</label>
                     <input type="text" id="FieldName" class="form-control" asp-for="DefaultValue" />
-                    <span asp-validation-for="DefaultValue" class="text-danger"></span>
+                    <span class="text-danger">
+                        @Html.ValidationMessageFor(model => model.DefaultValue)
+                    </span>
+                    @*<span asp-validation-for="DefaultValue" class="text-danger"></span>*@
                 </div>
                 <div class="form-check">
                     <input type="checkbox" class="form-check-input" asp-for="IsRequired" />
                     <label class="form-check-label" for="IsRequired"> Required</label>
-                    <span asp-validation-for="IsRequired" class="text-danger"></span>
+                    <span class="text-danger">
+                        @Html.ValidationMessageFor(model => model.IsRequired)
+                    </span>
+                    @*<span asp-validation-for="IsRequired" class="text-danger"></span>*@
                 </div>
                 <div class="form-group">
                     <label class="required" for="RequiredMessage">Required Message</label>
                     <input type="text" class="form-control" asp-for="RequiredMessage" />
-                    <span asp-validation-for="RequiredMessage" class="text-danger"></span>
+                    <span class="text-danger">
+                        @Html.ValidationMessageFor(model => model.RequiredMessage)
+                    </span>
+                    @* <span asp-validation-for="RequiredMessage" class="text-danger"></span>*@
                 </div>
                 <div class="form-group">
                     <label class="required" for="RegExValue">RegEx Value</label>
                     <input type="text" class="form-control" asp-for="RegExValue" />
-                    <span asp-validation-for="RegExValue" class="text-danger"></span>
+                    <span class="text-danger">
+                        @Html.ValidationMessageFor(model => model.RegExValue)
+                    </span>
+                    @*<span asp-validation-for="RegExValue" class="text-danger"></span>*@
                 </div>
                 <div class="form-group">
                     <label class="required" for="RegExMessage">RegEx Message</label>
                     <input type="text" class="form-control" asp-for="RegExMessage" />
-                    <span asp-validation-for="RegExMessage" class="text-danger"></span>
+                    <span class="text-danger">
+                        @Html.ValidationMessageFor(model => model.RegExMessage)
+                    </span>
+                    @*<span asp-validation-for="RegExMessage" class="text-danger"></span>*@
                 </div>
                 <input type="hidden" asp-for="Id" name="Id" />
                 <input type="hidden" asp-for="TemplateFormId" name="TemplateFormId" />
@@ -54,7 +79,7 @@
             <div class="modal-footer">
                 <button class="btn btn-danger" id="btnUpdateFieldClose" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove"></span>Close</button>
                 <button class="btn btn-success"><span class="glyphicon glyphicon-floppy-saved"></span> Save changes</button>
-            </div>          
+            </div>
         </div>
     </div>
 </form>
