--- a/DynamicForm/Views/Fields/Index.cshtml
+++ b/DynamicForm/Views/Fields/Index.cshtml
@@ -25,7 +25,7 @@
                 </h2>
             </div>
             <div class="x_content">
-                <div id="wait" class="loader" style="display:none;width:100px;height:100px;position:absolute;top:50%;left:50%;padding:2px;z-index:100000"></div>
+                <div id="wait" class="spinner"></div>
                 <table class="table table-striped table-bordered table-responsive" id="tbField" style="width:100%">
                     <thead>
                         <tr class="bg-secondary">
