--- a/DynamicForm/wwwroot/css/site.css
+++ b/DynamicForm/wwwroot/css/site.css
@@ -24,9 +24,25 @@ body {
 }
 
 .cic-logo {
-    max-height: 28px;
+    max-height: 40px;
 }
 
 .navbar {
     border-bottom: 1px solid #ccc;
+}
+
+.navbar-brand {
+    padding: 5px 15px !important;
+}
+
+.spinner {
+    display: none;
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    padding: 2px;
+    z-index: 100000;
+    background-color: #CCC;
 }
