--- a/DynamicForm/Views/Shared/_Layout.cshtml
+++ b/DynamicForm/Views/Shared/_Layout.cshtml
@@ -20,7 +20,8 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Home</a></li>
                     <li><a class="nav-link text-dark" asp-area="" asp-controller="Forms" asp-action="Index">Forms</a></li>
-                </ul>
+                    <li><a class="nav-link text-dark" asp-area="" asp-controller="DynamicForm" asp-action="Index">Dynamic Form</a></li>
+                </ul>               
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
                     <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
